--- a/app/src/main/res/layout/fragment_record_list_item.xml
+++ b/app/src/main/res/layout/fragment_record_list_item.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/record_list_margin_bottom"
+    android:background="#FFFFFF">
 
     <ImageView
         android:id="@+id/heroImage"
