--- a/app/src/main/res/layout/record_menu.xml
+++ b/app/src/main/res/layout/record_menu.xml
@@ -8,6 +8,28 @@
     android:background="#FFFFFF"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/textview2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:text="已备份录像："
+        android:textSize="@dimen/record_list_item_text_size"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:text="游戏内录像："
+        android:textSize="@dimen/record_list_item_text_size"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="@+id/imageView3" />
+
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="48dp"
@@ -32,18 +54,16 @@
         app:srcCompat="@drawable/ic_featured_play_list_black_24dp" />
 
     <TextView
-        android:id="@+id/inGameRecord"
+        android:id="@+id/inGameRecordCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        android:text="游戏内录像：23"
+        android:text="23"
         android:textSize="@dimen/record_list_item_text_size"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toTopOf="@+id/imageView3" />
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="@+id/textView" />
 
     <TextView
-        android:id="@+id/accountName"
+        android:id="@+id/accountInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -54,15 +74,13 @@
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <TextView
-        android:id="@+id/alreadyBackupRecord"
+        android:id="@+id/backupRecordCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        android:text="已备份录像：9"
+        android:text="9"
         android:textSize="@dimen/record_list_item_text_size"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+        app:layout_constraintStart_toEndOf="@+id/textview2"
+        app:layout_constraintTop_toTopOf="@+id/textview2" />
 
     <Button
         android:id="@+id/switchAccount"
