--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
-    android:name="xyz.piscesxp.pajtools.ItemFragment"
+    android:id="@+id/item_list_root_constraint"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D3D3D3"
-    app:layoutManager="LinearLayoutManager"
-    tools:context=".ui.record.list.RecordListFragment"
-    tools:listitem="@layout/fragment_record_list_item" />
+    tools:context=".ui.record.list.RecordListFragment">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/item_list"
+        android:name="xyz.piscesxp.pajtools.ItemFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#D3D3D3"
+        app:layoutManager="LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/fragment_record_list_item" />
+</androidx.constraintlayout.widget.ConstraintLayout>
